--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@angular/forms": "~11.2.3",
     "@angular/localize": "~11.2.3",
     "@angular/material": "^11.2.3",
+    "@angular/material-moment-adapter": "^11.2.3",
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^4.5.0",
+    "mat-daterangepicker": "^1.0.1",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
