--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.4",
     "mat-daterangepicker": "^1.0.1",
     "moment": "^2.29.1",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
