--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.4",
+    "d3": "^6.5.0",
     "mat-daterangepicker": "^1.0.1",
     "moment": "^2.29.1",
     "ng2-charts": "^2.4.2",
@@ -38,6 +39,7 @@
     "@angular-devkit/build-angular": "~0.1102.2",
     "@angular/cli": "~11.2.2",
     "@angular/compiler-cli": "~11.2.3",
+    "@types/d3": "^6.3.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
